--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,12 +22,15 @@
         <activity
             android:name=".WelcomeActivity"
             android:screenOrientation="fullSensor">
+        </activity>
+
+        <activity android:name=".SplashScreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".PreviousActivity" />
         <activity android:name=".UnsolvedQuery" />
         <activity android:name=".MyQueryActivity" />
