--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,22 +15,21 @@
         android:roundIcon="@mipmap/logo_new"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AsTeacher.TeacherMainActivity"></activity>
+        <activity android:name=".AsTeacher.AddVideoLecActivity"></activity>
+        <activity android:name=".AsTeacher.TeacherMainActivity" />
         <activity android:name=".AsTeacher.RegisterTeacher" />
         <activity android:name=".AsTeacher.LoginTeacher" />
         <activity android:name=".DemoFile" />
         <activity
             android:name=".WelcomeActivity"
-            android:screenOrientation="fullSensor">
-        </activity>
-
-        <activity android:name=".SplashScreen" >
+            android:screenOrientation="fullSensor"></activity>
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".PreviousActivity" />
         <activity android:name=".UnsolvedQuery" />
         <activity android:name=".MyQueryActivity" />
