--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,11 @@
         </activity>
 
         <activity android:name=".PreviousActivity" />
+        <activity android:name=".Questions" />
+        <activity android:name=".Feedback" />
+        <activity android:name=".BlogActivity" />
         <activity android:name=".VideoLectures" />
+        <activity android:name=".PowerPoint" />
         <activity android:name=".UnsolvedQuery" />
         <activity android:name=".MyQueryActivity" />
         <activity android:name=".TeacherActivity" />
