--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/logo_new"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AsTeacher.AddBlogActivity"></activity>
+        <activity android:name=".ViewVideoLecturesActivity"></activity>
+        <activity android:name=".AsTeacher.AddBlogActivity" />
         <activity android:name=".ReadBlogActivity" />
         <activity android:name=".AsTeacher.AddVideoLecActivity" />
         <activity android:name=".AsTeacher.TeacherMainActivity" />
